@@ -1,3 +1,4 @@
+  - fix bug when using arrays with tr_attr and td_attr in {html_table} (messju)
   - add unit testing to cvs core (Monte)
 
 Version 2.6.1 (Jan 16, 2004)
